<resources>
    <string name="app_name">BrickView</string>
    <string name="title_home">Home</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>

    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="short_username">Username must be at least 4 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="short_password">Password must be at least 8 characters</string>
    <string name="password_mismatch">Passwords mismatch</string>

    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to login -->
    <string name="title_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="profile_greeting">Hello %1$s</string>
    <string name="home_review_info">Review by %1$s\n%2$s</string>
    <string name="profile_set_info">Year: %1$d\nParts: %2$d</string>
    <string name="review_set_details">Set Id: %1$s\nParts: %2$d\nYear: %3$d\nMinifigs: %4$d</string>
</resources>